<resources>
    <string name="app_name">Vitaura</string>
    <string name="open_hamburger">Open</string>
    <string name="close_hamburger">Close</string>
    <string name="message_1">Услуги</string>
    <string name="message_2">Специалисты</string>
    <string name="message_3">Цены</string>
    <string name="message_4">Отзывы</string>
    <string name="message_5">Москва, Большой Тишинский пер., 10 стр 1</string>
    <string name="message_6">Главная</string>
    <string name="message_7">О нас</string>
    <string name="message_8">Услуги</string>
    <string name="message_9">Специалисты</string>
    <string name="message_10">Цены</string>
    <string name="message_11">Акции</string>
    <string name="message_12">Фото и видео</string>
    <string name="message_13">Отзывы</string>
    <string name="message_14">Контакты</string>
    <string name="message_15">Запись на приём</string>
    <string name="message_16">Назад</string>
    <string name="message_17">Популярные процедуры</string>
    <string name="message_18">Ваше имя</string>
    <string name="message_20">Отзыв</string>
    <string name="message_19">Номер телефона</string>
    <string name="message_21">Обязательные поля</string>
    <string name="message_22">Отправить</string>
    <string name="message_23">Удобная дата и время приема</string>
    <string name="message_24">Email</string>
    <string name="message_25">Нажимая на кнопку ниже, вы даёте согласие на
        обработку персональных данных и соглашаетесь
        с Политикой Конфиденциальности</string>
    <string name="message_26">Новый отзыв</string>
    <string name="message_27">Сообщение отправлено</string>
    <string name="message_28">Новая запись на приём</string>
    <string name="message_29">Ваше сообщение\n
        Успешно отправлено</string>
    <string name="message_30">Мы свяжемся с Вами\n
        в ближайшее время.</string>
    <string name="message_31">Записаться на прием</string>
    <string name="message_32">Бережное отношение\nк вашей красоте</string>
    <string name="message_33">Оставить отзыв</string>
    <string name="message_34">Подробнее</string>
    <string name="message_35">стоимость консультации</string>
    <string name="message_36">Посмотреть</string>
    <string name="message_37">Процедуру проводят</string>
    <string name="message_38">Цены на процедуру</string>
    <string name="message_39">Фотогалерея нашей клиники\n аппаратной косметологии и\n эстетической медицины\n VITAURA.</string>
    <string name="message_40">Фото клиники</string>
    <string name="message_41">Фото до и после</string>
    <string name="message_42">Наше портфолио. Примеры\n работ и результатов "до" и\n "после" проведения процедур\n специалистами нашей\n клиники.</string>
    <string name="message_43">Премия грация</string>
    <string name="message_44">Победа в номинации "Лучшая\n клиника эстетической\n медицины"</string>
    <string name="message_45">Другие акции</string>
    <string name="message_46">Акции</string>
    <string name="message_47">Клиника Vitaura</string>
    <string name="message_48">г. Москва, Большой Тишинский пер., 10 стр. 1</string>
    <string name="message_49">пн–сб: 10:00 – 21:00б вс: 10:00 – 20:00</string>
    <string name="message_50">+7(495)324–10–03</string>
    <string name="message_51">info@vitaura-clinic.ru</string>
    <string name="message_52">Как к нам добраться</string>
    <string name="message_53">м. Белорусская</string>
    <string name="message_54">Выход в сторону Белорусского вокзала, далее по 2-й Брестской улице, затем по Большой Грузинской ул. С Большой Грузинской поворачиваете в Большой Тишинский переулок.</string>
    <string name="message_55">м. Баррикадная</string>
    <string name="message_56">выход в сторону Большой Грузинской улицы. Двигаетесь по ней прямо, далее поворот налево Большой Тишинский переулок. Ориентир - Сбербанк на углу Большого Тишинского переулка.</string>
    <string name="message_57">клиника эстетической медицины</string>
    <string name="message_58">Vitaura</string>
</resources>