<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_6"/>
    <item android:id="@+id/about"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_7"/>
    <item android:id="@+id/services"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_8"/>
    <item android:id="@+id/doctors"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_9"/>
    <item android:id="@+id/prices"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_10"/>
    <item android:id="@+id/special"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_11"/>
    <item android:id="@+id/media"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_12"/>
    <item android:id="@+id/reviews"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_13"/>
    <item android:id="@+id/contacts"
        android:icon="@drawable/ic_chevron_right_blue_24dp"
        android:title="@string/message_14"/>
</menu>