<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:elevation="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/necessary_circle"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_callback"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="text"
            android:background="@drawable/textfield_bg"
            android:layout_gravity="center_horizontal"
            android:hint="@string/message_18"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/black"/>
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_callback"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:inputType="phone"
        android:background="@drawable/textfield_bg"
        android:layout_gravity="center_horizontal"
        android:hint="@string/message_19"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_callback"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/textfield_bg"
        android:layout_gravity="center_horizontal"
        android:hint="@string/message_24"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/calendar_callback"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:inputType="date"
        android:background="@drawable/textfield_bg"
        android:layout_gravity="center_horizontal"
        android:hint="@string/message_23"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/black"/>
    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:elevation="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/necessary_circle"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/comment_callback"
            android:layout_width="296dp"
            android:layout_height="234dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:background="@drawable/textfield_bg"
            android:layout_gravity="center_horizontal"
            android:gravity="top"
            android:hint="@string/message_20"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/black"/>
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_regular_pro"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:textSize="14sp"
        android:drawableStart="@drawable/necessary_circle"
        android:drawablePadding="12dp"
        android:text="@string/message_21"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_regular_pro"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:text="@string/message_25"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="225dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="35dp"
        android:text="@string/message_22"
        android:background="@drawable/sign_up_button"
        android:backgroundTint="@color/white"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>