<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="13dp"
        app:cardUseCompatPadding="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gallery_clinic"
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_pro"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/message_40"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_pro"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/message_39"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="13dp"
        app:cardUseCompatPadding="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gallery_results"
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_pro"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/message_41"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_pro"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/message_42"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="13dp"
        app:cardUseCompatPadding="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gallery_gracia"
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_pro"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/message_43"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_pro"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/message_44"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>